Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125096

Print button WebEngine PDF viewer works only once

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.8.0 Beta2, 6.9.0 FF
    • 6.5.5, 6.7.0
    • WebEngine
    • None
    • Linux/X11
    • ea2012c56 (dev), 96c8ebd25 (6.8)

    Description

      QWebEngineView::printRequested signal is emitted only once.

      To reproduce, add this to webview.cpp in simplebrowser example:

          connect(this, &QWebEngineView::printRequested, [this]{
              qDebug("print requested");
             print(...);
          });
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davidsz Szabolcs David
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes