Allow pressing the print button of PDF viewer multiple times

Chromium started to protect ongoing print jobs by a print_in_progress_
flag in PrintRenderFrameHelper. Now we have to properly close requested
print previews before starting a new one.

Fixes: QTBUG-125096
Change-Id: I83fec883d717756d97dc65e3b55363b0cac0fbef
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit ea2012c56952cd0378d13a4257eebade4e3c736d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>